--- a/News/Presentation/Base.lproj/Main.storyboard
+++ b/News/Presentation/Base.lproj/Main.storyboard
@@ -1,24 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gQC-If-aKN">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--News Tab Bar Controller-->
+        <scene sceneID="ApD-SK-9H3">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="gQC-If-aKN" customClass="NewsTabBarController" customModule="News" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="RKy-ad-u9b" customClass="NewsTabBar" customModule="News" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="IgR-nc-88Q" kind="relationship" relationship="viewControllers" id="BtG-g4-gOz"/>
+                        <segue destination="sk1-cv-VjW" kind="relationship" relationship="viewControllers" id="gLI-7g-jK6"/>
+                        <segue destination="yI0-ef-vLg" kind="relationship" relationship="viewControllers" id="6c3-6t-zUL"/>
+                        <segue destination="xdh-qZ-l5c" kind="relationship" relationship="viewControllers" id="gNT-yJ-Fxq"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="10u-sF-Ede" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="820.61068702290072" y="-2.1126760563380285"/>
+        </scene>
+        <!--InsightNowViewController-->
+        <scene sceneID="fp4-Bu-wZv">
+            <objects>
+                <viewControllerPlaceholder storyboardName="InsightNow" referencedIdentifier="InsightNowViewController" id="Ifq-pj-cFK" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="JGH-w9-SjQ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2tZ-dN-mpO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4218" y="-1011"/>
+        </scene>
+        <!--DiscoverViewController-->
+        <scene sceneID="trX-dN-h0p">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Discover" referencedIdentifier="DiscoverViewController" id="1UJ-Ez-Wsa" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="ycq-Qs-OWc"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aPu-V1-Wy8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4230" y="-340"/>
+        </scene>
+        <!--SaveViewController-->
+        <scene sceneID="b4Z-wp-Ree">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Save" referencedIdentifier="SaveViewController" id="GxB-le-TQn" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="dZt-1l-7il"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lno-7n-bm9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4208" y="358"/>
+        </scene>
+        <!--ProfileViewController-->
+        <scene sceneID="s7t-oA-ArL">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" referencedIdentifier="ProfileViewController" id="n0a-1U-a9m" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="HJm-Mh-HX7"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V5z-Ul-5vJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4195" y="1068"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="m9n-ob-TJX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xdh-qZ-l5c" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.circle" catalog="system" selectedImage="person.circle.fill" id="Kin-Rd-VW5"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4mW-Xh-lLf">
+                        <rect key="frame" x="0.0" y="118" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="n0a-1U-a9m" kind="relationship" relationship="rootViewController" id="cbR-Mf-G4O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T8a-WC-aq7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3540" y="1068"/>
+        </scene>
+        <!--Save-->
+        <scene sceneID="Zhs-WI-H2C">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yI0-ef-vLg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Save" image="bookmark" catalog="system" selectedImage="bookmark.fill" id="Q51-by-nSR"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Pyg-D0-ToH">
+                        <rect key="frame" x="0.0" y="118" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GxB-le-TQn" kind="relationship" relationship="rootViewController" id="z41-Le-nTP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5cm-Ja-geb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3566" y="358"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="78A-9r-r2g">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sk1-cv-VjW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Discover" image="safari" catalog="system" selectedImage="safari.fill" id="Lzc-Nb-1us"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1PC-FV-hIX">
+                        <rect key="frame" x="0.0" y="118" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1UJ-Ez-Wsa" kind="relationship" relationship="rootViewController" id="pUO-ac-Ut8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Etf-0o-iJz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3566" y="-340"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="7yH-58-9tC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IgR-nc-88Q" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" selectedImage="house.fill" id="2ja-zV-BPO"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fLO-xh-twg">
+                        <rect key="frame" x="0.0" y="118" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ifq-pj-cFK" kind="relationship" relationship="rootViewController" id="DDE-pH-o8A"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OdC-9d-HTV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3540" y="-1011"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bookmark" catalog="system" width="110" height="128"/>
+        <image name="bookmark.fill" catalog="system" width="110" height="128"/>
+        <image name="house" catalog="system" width="128" height="104"/>
+        <image name="house.fill" catalog="system" width="128" height="104"/>
+        <image name="person.circle" catalog="system" width="128" height="123"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="123"/>
+        <image name="safari" catalog="system" width="128" height="123"/>
+        <image name="safari.fill" catalog="system" width="128" height="123"/>
+    </resources>
 </document>
